# nosave-chat

./: .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  LICENSE  Makefile  README.md  tailwind.css
.github/workflows/: android.yml
assets/: tailwind.css
scripts/: build-android-apk-with-icon.sh
src/: main.rs
src/components/: hero.rs
src/views/: layout.rs  mod.rs
